# Chiron

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .vale.ini  CHIRON_UPGRADE_PLAN.md  CLI_CONSOLIDATION_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_SUMMARY.md  GAP_ANALYSIS_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_IMPLEMENTATION_COMPLETION.md  Makefile  NEXT_STEPS_IMPLEMENTATION.md  Next Steps.md  Next_Steps.md  OFFLINE.md  QUICK_REFERENCE.md  README.md  REFACTORING_IMPLEMENTATION.md  ROADMAP.md  ROADMAP_CLEANUP_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_PROGRESS_SUMMARY.md  TODO_IMPLEMENTATION_SUMMARY.md  __init__.py  __main__.py  chiron.json  docker-compose.observability.yml  mkdocs.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  renovate.json  (+3 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: airgap.yml  apple-metadata-guard.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  diff-cover.yml  docs-lint.yml  quality-gates.yml  release.yml  reproducibility.yml  sigstore-verify.yml  sync-env.yml  trivy.yml  wheels.yml
.trunk/: trunk.yaml
.vale/styles/config/vocabularies/Chiron/: accept.txt
chaos/: README.md  actions.py  controls.py  probes.py
chaos/experiments/: service-availability.json
chiron_packaging/: offline.py
dev-toolkit/refactoring/ci/: workflow.partial.yml
dev-toolkit/refactoring/config/: refactor.config.yaml
dev-toolkit/refactoring/docs/: PLAN.md  PLAYBOOK.md  README.md
dev-toolkit/refactoring/output/: churn.txt  hotspots.csv
dev-toolkit/refactoring/scripts/analyse/: git_churn.sh  hotspots_py.py
dev-toolkit/refactoring/scripts/rollout/: shard_pr_list.py
dev-toolkit/refactoring/scripts/verify/: snapshot_scaffold.py
docs/: AUTOMATION_GUIDE.md  BADGE_MANAGEMENT.md  CHIRON_UPGRADE_PLAN.md  CI_REPRODUCIBILITY_VALIDATION.md  CI_WORKFLOWS.md  DEPS_MODULES_STATUS.md  ENVIRONMENT_SYNC.md  GAP_ANALYSIS.md  GRAFANA_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_TESTING.md  MODULE_BOUNDARY_TESTING.md  OBSERVABILITY_SANDBOX.md  OFFLINE.md  PROJECT_STANDARDS.md  QUALITY_GATES.md  QUALITY_STATUS.md  README.md  REFACTORING_GUIDE.md  ROADMAP.md  TOOLING_IMPLEMENTATION_STATUS.md  TUF_IMPLEMENTATION_GUIDE.md  diataxis.json  index.md
docs/deprecated/: QUALITY_GATES_IMPLEMENTATION_SUMMARY.md  README.md  TESTING_IMPLEMENTATION_SUMMARY.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/tutorials/: first-run.md
github/: __init__.py  sync.py
grafana-provisioning/dashboards/: dashboards.yml
grafana-provisioning/datasources/: datasources.yml
hephaestus/: LICENSE  README.md  pyproject.toml
hephaestus/docs/: QUALITY_GATES.md  diataxis.json  index.md
hephaestus/docs/explanation/: architecture.md
hephaestus/docs/how-to/: refactoring.md
hephaestus/docs/reference/: cli.md
hephaestus/docs/tutorials/: getting-started.md
hephaestus/hephaestus-toolkit/refactoring/ci/: workflow.partial.yml
hephaestus/hephaestus-toolkit/refactoring/config/: refactor.config.yaml
hephaestus/hephaestus-toolkit/refactoring/docs/: PLAN.md  PLAYBOOK.md  README.md
hephaestus/hephaestus-toolkit/refactoring/scripts/analyse/: git_churn.sh  hotspots_py.py
hephaestus/hephaestus-toolkit/refactoring/scripts/codemods/py/: rename_function.py
hephaestus/hephaestus-toolkit/refactoring/scripts/rollout/: shard_pr_list.py
hephaestus/hephaestus-toolkit/refactoring/scripts/verify/: snapshot_scaffold.py
hephaestus/src/hephaestus/: __init__.py  cli.py  planning.py  toolbox.py
hephaestus/tests/: test_cli.py  test_toolbox.py
policy/: README.md
policy/policies/: dependencies.rego  workflows.rego
scripts/: build_opa_bundle.sh  check_apple_metadata.py  install_conftest.sh  manage-deps.sh  policy_context.py  preflight_deps.py  run_policy_checks.sh  sync_env_deps.py
src/chiron/: __init__.py  __main__.py  api.py  benchmark.py  core.py  dev_toolbox.py  exceptions.py  features.py  hardening.py  planning.py  plugins.py  reproducibility.py  schema_validator.py  subprocess_utils.py  telemetry.py  tuf_metadata.py  typer_cli.py  wizard.py
src/chiron/cli/: main.py
src/chiron/dashboards/: grafana-dashboard.json  prometheus-metrics.prom
src/chiron/doctor/: bootstrap.py  models.py  offline.py  package_cli.py
src/chiron/github/: __init__.py  copilot.py  sync.py
src/chiron/mcp/: __init__.py  llm_contracts.py  server.py
src/chiron/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/chiron/orchestration/: __init__.py  auto_sync.py  coordinator.py  governance.py
src/chiron/remediation/: __init__.py  autoremediate.py  runtime.py
src/chiron/schemas/: chiron-config.schema.json
src/chiron/service/: __init__.py  app.py  middleware.py
src/chiron/service/routes/: api.py  health.py
src/chiron/tools/: __init__.py  format_yaml.py
tests/: __init__.py  conftest.py  test_api.py  test_benchmark.py  test_cli_error_paths.py  test_cli_github_copilot.py  test_cli_hardening.py  test_cli_main.py  test_cli_tools_benchmark.py  test_contracts.py  test_core.py  test_deps_bundler.py  test_deps_conflict_resolver.py  test_deps_constraints.py  test_deps_drift_status.py  test_deps_graph.py  test_deps_guard.py  test_deps_modules.py  test_deps_planner.py  test_deps_policy.py  test_deps_preflight_summary.py  test_deps_security_overlay.py  test_deps_signing.py  test_deps_supply_chain.py  test_deps_sync.py  test_deps_verify.py  test_dev_toolbox.py  test_doctor_modules.py  test_env_sync_script.py  test_features.py  test_github_copilot_module.py  test_hardening.py  test_init.py  test_mcp_llm_contracts.py  test_mcp_server.py  test_observability_logging.py  test_observability_metrics.py  test_observability_tracing.py  test_orchestration_coordinator.py  test_plugins.py  (+13 more)
tests/orchestration/: test_auto_sync.py
(+1 files in other folders)
