[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hephaestus"
version = "0.1.0"
description = "Hephaestus developer toolkit for quality automation and refactoring"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hephaestus Maintainers" }]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1",
  "defusedxml>=0.7.1",
  'tomli>=2.0.1; python_version < "3.11"',
]
[project.optional-dependencies]
analysis = ["radon>=6.0.1", "xenon>=0.9.1", "mutmut>=3.0.0"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.21"]
test = ["pytest-cov>=5.0.0", "pytest-xdist>=3.6.1"]

[project.scripts]
hephaestus = "hephaestus.cli:main"

[tool.hephaestus.toolkit]
config = "hephaestus-toolkit/refactoring/config/refactor.config.yaml"
